k8s-yaml/mongo-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        resources:
          requests:
            memory: "63Mi"
            cpu: "249m"
          limits:
            memory: "127Mi"
            cpu: "499m"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector: # connect to the pod mongodb
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # expose service port
      targetPort: 27017 # expose pod port
