k8s-yaml/mongo-express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector: # connect to the pod mongodb
    app: mongo-express
  type: LoadBalancer # accept external connection
  ports:
    - protocol: TCP
      port: 8081 # expose service port
      targetPort: 8081 # expose pod por
      nodePort: 30000 # external access port
